<resources>
    <string name="app_name">International_converter</string>

    <string name="lang_button_text">Переключить на русский</string>


    <string name="input_hint">Введите значение</string>
    <string name="convert_button">Конвертировать</string>
    <string name="result_text">%1$.2f %2$s</string>
    <string-array name="length_units">
        <item>километр</item>
        <item>метр</item>
        <item>сантиметр</item>
        <item>миля</item>
        <item>фут</item>
        <item>дюйм</item>
    </string-array>

    <string name="from_text">From:</string>
    <string name="to_text">To:</string>
    <string name="error_message">Please enter a valid number.</string>
    <string name="units_abbreviation">
        <item>km</item>
        <item>m</item>
        <item>cm</item>
        <item>mi</item>
        <item>ft</item>
        <item>in</item>
    </string>
</resources>